src/lib.rs

/* automatically generated by rust-bindgen 0.71.1 */

#![allow(non_camel_case_types, non_snake_case)]

pub const SPIRO_CORNER: u8 = 118u8;
pub const SPIRO_G4: u8 = 111u8;
pub const SPIRO_G2: u8 = 99u8;
pub const SPIRO_LEFT: u8 = 91u8;
pub const SPIRO_RIGHT: u8 = 93u8;
pub const SPIRO_END: u8 = 122u8;
pub const SPIRO_OPEN_CONTOUR: u8 = 123u8;
pub const SPIRO_END_OPEN_CONTOUR: u8 = 125u8;
pub const SPIRO_ANCHOR: u8 = 97u8;
pub const SPIRO_HANDLE: u8 = 104u8;
pub const SPIRO_INCLUDE_LAST_KNOT: u32 = 256;
pub const SPIRO_RETRO_VER1: u32 = 1024;
pub const SPIRO_REVERSE_SRC: u32 = 2048;
pub const SPIRO_ARC_CUB_QUAD_CLR: u32 = 32767;
pub const SPIRO_ARC_CUB_QUAD_MASK: u32 = 28672;
pub const SPIRO_CUBIC_TO_BEZIER: u32 = 0;
pub const SPIRO_CUBIC_MIN_MAYBE: u32 = 4096;
pub const SPIRO_ARC_MAYBE: u32 = 8192;
pub const SPIRO_ARC_MIN_MAYBE: u32 = 12288;
pub const SPIRO_QUAD0_TO_BEZIER: u32 = 16384;
pub const SPIRO_INTERNAL_BEZCTX: u32 = 512;
pub type bezctx = _bezctx;
#[repr(C)]
#[derive(Debug, Default, Copy, Clone, PartialEq)]
pub struct _bezctx {
    pub moveto: ::std::option::Option<
        unsafe extern "C" fn(bc: *mut bezctx, x: f64, y: f64, is_open: ::std::os::raw::c_int),
    >,
    pub lineto: ::std::option::Option<unsafe extern "C" fn(bc: *mut bezctx, x: f64, y: f64)>,
    pub quadto: ::std::option::Option<
        unsafe extern "C" fn(bc: *mut bezctx, x1: f64, y1: f64, x2: f64, y2: f64),
    >,
    pub curveto: ::std::option::Option<
        unsafe extern "C" fn(bc: *mut bezctx, x1: f64, y1: f64, x2: f64, y2: f64, x3: f64, y3: f64),
    >,
    pub mark_knot: ::std::option::Option<
        unsafe extern "C" fn(bc: *mut bezctx, knot_idx: ::std::os::raw::c_int),
    >,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of _bezctx"][::std::mem::size_of::<_bezctx>() - 40usize];
    ["Alignment of _bezctx"][::std::mem::align_of::<_bezctx>() - 8usize];
    ["Offset of field: _bezctx::moveto"][::std::mem::offset_of!(_bezctx, moveto) - 0usize];
    ["Offset of field: _bezctx::lineto"][::std::mem::offset_of!(_bezctx, lineto) - 8usize];
    ["Offset of field: _bezctx::quadto"][::std::mem::offset_of!(_bezctx, quadto) - 16usize];
    ["Offset of field: _bezctx::curveto"][::std::mem::offset_of!(_bezctx, curveto) - 24usize];
    ["Offset of field: _bezctx::mark_knot"][::std::mem::offset_of!(_bezctx, mark_knot) - 32usize];
};
#[repr(C)]
#[derive(Debug, Default, Copy, Clone, PartialEq)]
pub struct curve_data {
    pub ty: ::std::os::raw::c_char,
    pub x0: f64,
    pub y0: f64,
    pub x1: f64,
    pub y1: f64,
    pub x2: f64,
    pub y2: f64,
    pub x3: f64,
    pub y3: f64,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of curve_data"][::std::mem::size_of::<curve_data>() - 72usize];
    ["Alignment of curve_data"][::std::mem::align_of::<curve_data>() - 8usize];
    ["Offset of field: curve_data::ty"][::std::mem::offset_of!(curve_data, ty) - 0usize];
    ["Offset of field: curve_data::x0"][::std::mem::offset_of!(curve_data, x0) - 8usize];
    ["Offset of field: curve_data::y0"][::std::mem::offset_of!(curve_data, y0) - 16usize];
    ["Offset of field: curve_data::x1"][::std::mem::offset_of!(curve_data, x1) - 24usize];
    ["Offset of field: curve_data::y1"][::std::mem::offset_of!(curve_data, y1) - 32usize];
    ["Offset of field: curve_data::x2"][::std::mem::offset_of!(curve_data, x2) - 40usize];
    ["Offset of field: curve_data::y2"][::std::mem::offset_of!(curve_data, y2) - 48usize];
    ["Offset of field: curve_data::x3"][::std::mem::offset_of!(curve_data, x3) - 56usize];
    ["Offset of field: curve_data::y3"][::std::mem::offset_of!(curve_data, y3) - 64usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone, PartialEq)]
pub struct ls_bezctx {
    pub base: bezctx,
    pub cd: *mut curve_data,
    pub l: ::std::os::raw::c_int,
    pub max: ::std::os::raw::c_int,
    pub is_open: ::std::os::raw::c_int,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of ls_bezctx"][::std::mem::size_of::<ls_bezctx>() - 64usize];
    ["Alignment of ls_bezctx"][::std::mem::align_of::<ls_bezctx>() - 8usize];
    ["Offset of field: ls_bezctx::base"][::std::mem::offset_of!(ls_bezctx, base) - 0usize];
    ["Offset of field: ls_bezctx::cd"][::std::mem::offset_of!(ls_bezctx, cd) - 40usize];
    ["Offset of field: ls_bezctx::l"][::std::mem::offset_of!(ls_bezctx, l) - 48usize];
    ["Offset of field: ls_bezctx::max"][::std::mem::offset_of!(ls_bezctx, max) - 52usize];
    ["Offset of field: ls_bezctx::is_open"][::std::mem::offset_of!(ls_bezctx, is_open) - 56usize];
};
impl Default for ls_bezctx {
    fn default() -> Self {
        let mut s = ::std::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::std::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
#[repr(C)]
#[derive(Debug, Default, Copy, Clone, PartialEq)]
pub struct spiro_cp {
    pub x: f64,
    pub y: f64,
    pub ty: ::std::os::raw::c_char,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of spiro_cp"][::std::mem::size_of::<spiro_cp>() - 24usize];
    ["Alignment of spiro_cp"][::std::mem::align_of::<spiro_cp>() - 8usize];
    ["Offset of field: spiro_cp::x"][::std::mem::offset_of!(spiro_cp, x) - 0usize];
    ["Offset of field: spiro_cp::y"][::std::mem::offset_of!(spiro_cp, y) - 8usize];
    ["Offset of field: spiro_cp::ty"][::std::mem::offset_of!(spiro_cp, ty) - 16usize];
};
#[repr(C)]
#[derive(Debug, Default, Copy, Clone, PartialEq)]
pub struct spiro_seg_s {
    pub x: f64,
    pub y: f64,
    pub ty: ::std::os::raw::c_char,
    pub bend_th: f64,
    pub ks: [f64; 4usize],
    pub seg_ch: f64,
    pub seg_th: f64,
    pub l: f64,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of spiro_seg_s"][::std::mem::size_of::<spiro_seg_s>() - 88usize];
    ["Alignment of spiro_seg_s"][::std::mem::align_of::<spiro_seg_s>() - 8usize];
    ["Offset of field: spiro_seg_s::x"][::std::mem::offset_of!(spiro_seg_s, x) - 0usize];
    ["Offset of field: spiro_seg_s::y"][::std::mem::offset_of!(spiro_seg_s, y) - 8usize];
    ["Offset of field: spiro_seg_s::ty"][::std::mem::offset_of!(spiro_seg_s, ty) - 16usize];
    ["Offset of field: spiro_seg_s::bend_th"]
        [::std::mem::offset_of!(spiro_seg_s, bend_th) - 24usize];
    ["Offset of field: spiro_seg_s::ks"][::std::mem::offset_of!(spiro_seg_s, ks) - 32usize];
    ["Offset of field: spiro_seg_s::seg_ch"][::std::mem::offset_of!(spiro_seg_s, seg_ch) - 64usize];
    ["Offset of field: spiro_seg_s::seg_th"][::std::mem::offset_of!(spiro_seg_s, seg_th) - 72usize];
    ["Offset of field: spiro_seg_s::l"][::std::mem::offset_of!(spiro_seg_s, l) - 80usize];
};
pub type spiro_seg = spiro_seg_s;
unsafe extern "C" {
    pub fn run_spiro(src: *const spiro_cp, n: ::std::os::raw::c_int) -> *mut spiro_seg;
}
unsafe extern "C" {
    pub fn free_spiro(s: *mut spiro_seg);
}
unsafe extern "C" {
    pub fn spiro_to_bpath(s: *const spiro_seg, n: ::std::os::raw::c_int, bc: *mut bezctx);
}
unsafe extern "C" {
    pub fn get_knot_th(s: *const spiro_seg, i: ::std::os::raw::c_int) -> f64;
}
unsafe extern "C" {
    pub fn run_spiro0(
        src: *const spiro_cp,
        dm: *mut f64,
        ncq: ::std::os::raw::c_int,
        n: ::std::os::raw::c_int,
    ) -> *mut spiro_seg;
}
unsafe extern "C" {
    pub fn spiro_to_bpath0(
        src: *const spiro_cp,
        s: *const spiro_seg,
        dm: *mut f64,
        ncq: ::std::os::raw::c_int,
        n: ::std::os::raw::c_int,
        bc: *mut bezctx,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn LibSpiroVersion() -> *const ::std::os::raw::c_char;
}
unsafe extern "C" {
    pub fn TaggedSpiroCPsToBezier(spiros: *mut spiro_cp, bc: *mut bezctx);
}
unsafe extern "C" {
    pub fn SpiroCPsToBezier(
        spiros: *mut spiro_cp,
        n: ::std::os::raw::c_int,
        isclosed: ::std::os::raw::c_int,
        bc: *mut bezctx,
    );
}
unsafe extern "C" {
    pub fn TaggedSpiroCPsToBezier0(spiros: *mut spiro_cp, bc: *mut bezctx)
    -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn SpiroCPsToBezier0(
        spiros: *mut spiro_cp,
        n: ::std::os::raw::c_int,
        isclosed: ::std::os::raw::c_int,
        bc: *mut bezctx,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn TaggedSpiroCPsToBezier1(
        spiros: *mut spiro_cp,
        bc: *mut bezctx,
        done: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn SpiroCPsToBezier1(
        spiros: *mut spiro_cp,
        n: ::std::os::raw::c_int,
        isclosed: ::std::os::raw::c_int,
        bc: *mut bezctx,
        done: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn TaggedSpiroCPsToBezier2(
        spiros: *mut spiro_cp,
        ncq: ::std::os::raw::c_int,
        bc: *mut bezctx,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn SpiroCPsToBezier2(
        spiros: *mut spiro_cp,
        n: ::std::os::raw::c_int,
        ncq: ::std::os::raw::c_int,
        isclosed: ::std::os::raw::c_int,
        bc: *mut bezctx,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn new_ls_bezctx(max: ::std::os::raw::c_int, ncq: ::std::os::raw::c_int) -> *mut ls_bezctx;
}
unsafe extern "C" {
    pub fn free_ls_bezctx(bd: *mut ls_bezctx);
}
